[project]
name = "task-cli"
version = "0.1.0"
description = "A simple task manager CLI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rich",
    "pytest"    
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[project.scripts]
task-cli = "main:main"