[project]
name = "task-cli"
version = "0.1.0"
description = "A simple task manager CLI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rich",
    "pytest"    
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
packages = ["src", "src.models"]

[project.scripts]
task-cli = "main:main"